--- a/nodejs-app/package.json
+++ b/nodejs-app/package.json
@@ -1,8 +1,9 @@
 {
   "name": "nodejs-app",
   "version": "1.0.0",
-  "description": "Hello World App",
+  "description": "Helilo World App",
   "main": "server.js",
+  "scripts": "start server.js",
   "author": "Red Hat Training",
   "license": "ASL",
   "dependencies": {
