--- a/nodejs-app/package.json
+++ b/nodejs-app/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "Helilo World App",
   "main": "server.js",
-  "scripts": "start server.js",
+  "scripts": "run server.js",
   "author": "Red Hat Training",
   "license": "ASL",
   "dependencies": {
     "express": "4.x",
-    "html-errors": "latest"
+    "http-errors": "latest"
   }
 }
